# PowerOpenHarmony

./: README.md
applications/sample/apm32f407_adc/: BUILD.gn  apm32f4x_adc_why.c  bundle.json
applications/sample/apm32f407_can/: BUILD.gn  apm32f4x_can_why.c  bundle.json
applications/sample/apm32f407_dac/: BUILD.gn  apm32f4x_dac_why.c  bundle.json
applications/sample/apm32f407_dbg/: BUILD.gn  apm32f4x_dbg_why.c  bundle.json
applications/sample/apm32f407_eth/: BUILD.gn  apm32f407_tcp_eth.c  board_DP83848.c  board_LAN8720A.c  bundle.json  ethernetif.c
applications/sample/apm32f407_eth/include/: apm32f407_tcp_eth.h  board_LAN8720A.h  ethernetif.h
applications/sample/my_first_app/: BUILD.gn  bundle.json  hello_world.c
device/board/csg/: BUILD.gn
device/board/csg/apm32f4_board/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
device/board/csg/apm32f4_board/liteos_m/: BUILD.gn  config.gni
device/board/csg/apm32f4_board/liteos_m/bsp/: BUILD.gn
device/board/csg/apm32f4_board/liteos_m/bsp/include/: Board_APM32F407_EVAL.h  apm32f4xx_int.h  main.h  target_config.h
device/board/csg/apm32f4_board/liteos_m/bsp/ld/: APM32F4xxxG_FLASH.ld
device/board/csg/apm32f4_board/liteos_m/bsp/src/: Board_APM32F407_EVAL.c  apm32f4_board.code-workspace  apm32f4xx_int.c  dprintf.c  helloWord.c  main.c  system_apm32f4xx.c
device/board/csg/apm32f4_board/liteos_m/bsp/startup/: startup_apm32f40x.s
device/board/csg/apm32f4_board/liteos_m/lwip_adapter/: lwipopts.h
device/board/csg/at32f4_board/: BUILD.gn  Kconfig.liteos_m.board  at32f4_board_defconfig  ohos.build
device/board/csg/at32f4_board/liteos_m/: BUILD.gn  config.gni
device/board/csg/gd32f4xx_board/: ohos.build
device/board/csg/gd32f4xx_board/liteos_m/: BUILD.gn
device/board/csg/hc32f4_board/: BUILD.gn  Kconfig.liteos_m.board  ohos.build
device/board/csg/hc32f4_board/application/: BUILD.gn
device/board/csg/hc32f4_board/application/read_flash/: BUILD.gn  read_flash.c  read_flash.h
device/board/csg/hc32f4_board/liteos_m/: BUILD.gn  config.gni
device/board/csg/hc32f4_board/liteos_m/board/: BUILD.gn  main.c  target_config.h
device/board/csg/hc32f4_board/liteos_m/board/libc/: dprintf.c
device/board/csg/hc32f4_board/liteos_m/board/src/: ev_hc32f4a0_lqfp176.c
device/board/csg/hc32f4_board/liteos_m/board/startup/linker/: HC32F4A0xG.ld
device/board/csg/stm32f4_board/: BUILD.gn  Kconfig.liteos_m.board
device/board/csg/stm32f4_board/liteos_m/: BUILD.gn
device/board/csg/stm32f4_board/liteos_m/bsp/: BUILD.gn
device/board/csg/stm32f4_board/liteos_m/bsp/include/: main.h  target_config.h
device/board/csg/stm32f4_board/liteos_m/bsp/ld/: STM32F407VGTx_FLASH.ld
device/board/csg/stm32f4_board/liteos_m/bsp/src/: dprintf.c  main.c  stm32f4xx_hal_msp.c
device/board/csg/stm32f4_board/liteos_m/drivers/exit/: BUILD.gn
device/board/csg/stm32f4_board/liteos_m/fs/littlefs/: BUILD.gn
device/board/csg/stm32l4_board/: BUILD.gn  Kconfig.liteos_m.board
device/board/csg/stm32l4_board/liteos_m/bsp/: BUILD.gn
device/board/csg/stm32l4_board/liteos_m/bsp/include/: stm32l4xx_hal_conf.h  target_config.h
device/board/csg/stm32l4_board/liteos_m/bsp/ld/: STM32L496VETx_FLASH.ld
device/board/csg/stm32l4_board/liteos_m/bsp/src/: main.c  stm32l4xx_hal_msp.c
device/board/csg/stm32l4_board/liteos_m/drivers/: BUILD.gn
device/board/goodix/: BUILD.gn
device/board/goodix/application/: BUILD.gn
device/board/goodix/application/cloud_collaborate/: device_sys_info.h
device/board/goodix/application/ota_demo/: ota_demo.h
device/board/goodix/gr5515_sk/liteos_m/: config.gni
device/board/lango/dev_wifi_a/liteos_m/: config.gni
device/soc/apm/: BUILD.gn  Kconfig.liteos_m.soc
device/soc/apm/apm32f4xx/: .BUILD.gn.swp  .Kconfig.liteos_m.defconfig.swp  Kconfig.liteos_m.defconfig.apm32f4xx  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
device/soc/apm/apm32f4xx/sdk/: .BUILD.gn.swo  .BUILD.gn.swp  BUILD.gn
device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_ETH_Driver/inc/: apm32f4xx_eth.h
device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_ETH_Driver/src/: apm32f4xx_eth.c
device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_StdPeriphDriver/inc/: apm32f4xx_dac.h  bsp_delay.h
device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_StdPeriphDriver/src/: apm32f4xx_qspi.c  apm32f4xx_sdio.c  bsp_delay.c
device/soc/apm/apm32f4xx/sdk/Drivers/CMSIS/Device/APM/APM32F4xx/: LICENSE.txt
device/soc/apm/apm32f4xx/sdk/Drivers/CMSIS/Device/APM/APM32F4xx/Include/: apm32f407xx.h  apm32f4xx.h
device/soc/apm/apm32f4xx/sdk/Drivers/CMSIS/Include/: core_cm4.h
device/soc/artery/: README.en.md  README.md
device/soc/artery/at32f4xx/libraries/drivers/: BUILD.gn
device/soc/artery/at32f4xx/liteos_m/: BUILD.gn
device/soc/artery/at32f4xx/liteos_m/include/: flash.h  target_config.h  usart.h
device/soc/artery/at32f4xx/liteos_m/src/: dprintf.c  flash.c  main.c  usart.c
device/soc/artery/at32f4xx/liteos_m/startup/: AT32F403AxC_FLASH.ld
device/soc/artery/hals/update/: BUILD.gn  hal_hota_board.c
device/soc/gigadevice/gd32f4xx/board/: BUILD.gn
device/soc/gigadevice/gd32f4xx/board/include/: fmc_operation.h  usart.h
device/soc/gigadevice/gd32f4xx/board/src/: fmc_operation.c  main.c  usart.c
device/soc/gigadevice/gd32f4xx/board/startup/: gd32f4xx_flash.ld
device/soc/gigadevice/gd32f4xx/libraries/GD32F4xx_Firmware_Library/: BUILD.gn
device/soc/gigadevice/hals/update/: hal_hota_board.c
device/soc/goodix/gr551x/sdk_liteos/config/: custom_config.h
device/soc/goodix/gr551x/sdk_liteos/gr551x_sdk/: BUILD.gn
device/soc/goodix/gr551x/sdk_liteos/platform/: BUILD.gn
device/soc/goodix/gr551x/sdk_liteos/platform/main/: BUILD.gn  main.c
device/soc/goodix/gr551x/sdk_liteos/platform/ota_uart/: BUILD.gn  ota_uart.c  ota_uart.h
device/soc/hdsc/: BUILD.gn  README.en.md  README.md
device/soc/hdsc/hc32f4xx/: BUILD.gn
device/soc/hdsc/hc32f4xx/Drivers/: BUILD.gn
device/soc/hdsc/hc32f4xx/hals/update/: BUILD.gn
device/soc/stm/stm32f4xx/sdk/: BUILD.gn
device/soc/stm/stm32l4xx/sdk/: BUILD.gn
(+39 files in other folders)
