# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (ohos_kernel_type == "liteos_m") {
  import("//kernel/liteos_m/liteos.gni")
  
  module_name = get_path_info(rebase_path("."), "name")

  config("board_hdf_config") {
  include_dirs = [
    ".",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/core/common/include/host",
    "//drivers/hdf_core/adapter/uhdf2/include/devhost",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/framework/support/platform/include/gpio",
    "//drivers/hdf_core/framework/support/platform/include/i2c",
    "//drivers/hdf_core/framework/support/platform/include/spi",
    "//drivers/hdf_core/framework/support/platform/include/adc",
    "//drivers/hdf_core/framework/support/platform/include/dac",
    "//drivers/hdf_core/framework/support/platform/include/rtc",
    "//drivers/hdf_core/framework/support/platform/include/pwm",
    "//drivers/hdf_core/framework/support/platform/include/watchdog",
    "//drivers/hdf_core/framework/support/platform/include/uart",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/support/platform/include/fwk",
    "//drivers/hdf_core/framework/utils/include",
    "./hdf_drivers/lfs/inc",
    "./hdf_drivers/spi",
    "./hdf_drivers/gpio",
    "./hdf_drivers/dataBuffer/include",
    "//third_party/littlefs",
    "//drivers/hdf_core/framework/support/platform/src/rtc",
    "//drivers/hdf_core/framework/core/adapter/vnode/include",

    "//drivers/hdf_core/interfaces/inner_api/utils/",
    "//drivers/hdf_core/interfaces/inner_api/osal/shared",
    "//drivers/hdf_core/interfaces/inner_api/host/shared",
    "//drivers/hdf_core/interfaces/inner_api/core",
  ]
}

  module_group(module_name) {
    modules = [ 
      "board",
    ]
    configs = [ ":board_hdf_config" ]
  }
}
