# Copyright (c) 2022 Hihope Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [ "startup/startup_apm32f40x.s" ]

  sources += [
    "src/main.c",
    "src/system_apm32f4xx.c",
    "src/apm32f4xx_int.c",
    "src/Board_APM32F407_EVAL.c",
    "src/dprintf.c",
    #"src/helloWord.c",
  ]

  include_dirs = [
    "include",
    "../fs/littlefs/include",
  ]

  include_dirs += [
    "//base/hiviewdfx/hiview_lite",
    "//base/hiviewdfx/hilog_lite/frameworks/mini",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
  ]

  if (build_xts) {
    deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
    deps += [ "//test/xts/acts/commonlibrary_lite/file_hal:ActsUtilsFileTest" ]
    deps += [ "//test/xts/acts/startup_lite/syspara_hal:ActsParameterTest" ]
  }
}

config("public") {
  include_dirs = [
    ".",
    "include",
    "//device/soc/apm/apm32f4xx/sdk/Core/Inc",
    "//device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_StdPeriphDriver/inc",
    "//device/soc/apm/apm32f4xx/sdk/Drivers/APM32F4xx_ETH_Driver/inc",
    "//device/soc/apm/apm32f4xx/sdk/Drivers/CMSIS/Device/APM/APM32F4xx/Include",
    "//device/board/csg/apm32f4_board/liteos_m/bsp/include",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
    "//drivers/hdf_core/framework/core/common/include/manager",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/interfaces/inner_api/utils",
  ]

  ldflags = [
    "-Wl,-T" + rebase_path("ld/APM32F4xxxG_FLASH.ld"),
    "-Wl,-u_printf_float",
    
  ]

    lib_dirs = [ "$root_out_dir/libs" ]
    ldflags += [
      "-Wl,--whole-archive",
      "-lbootstrap",
      "-lbroadcast",
      "-Wl,--no-whole-archive",
    ]
    
  if (build_xts) {
    ldflags += [
      "-Wl,--whole-archive",
      "-lhctest",
      "-lhal_sysparam",

      "-lmodule_ActsSamgrTest",
      "-lmodule_ActsBootstrapTest",
      "-lmodule_ActsDfxFuncTest",
      "-lmodule_ActsHieventLiteTest",
      "-lmodule_ActsUpdaterFuncTest",
      "-lmodule_ActsHuksHalFunctionTest",
      "-lhuks_test_common",

      "-lmodule_ActsUtilsFileTest",
      "-lmodule_ActsParameterTest",


      "-Wl,--no-whole-archive",
    ]
  }

  libs = [
    "c",
    "m",
    "nosys",
  ]
   cflags = [
    "-g",
  ]
}
