# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "./startup/startup_hc32f4a0.S",
    "main.c",
    "./libc/dprintf.c",
    "./src/ev_hc32f4a0_lqfp176.c",
  ]
  libs = ["//vendor/ph_libs/csg/libary/cooperation/PHM/integrality/libhash_check.a"]
  }

config("public") {
  include_dirs = [
    ".",
    "./include",
    "//device/soc/hdsc/hc32f4xx/Drivers/hc32_ll_driver/inc",
    "//device/soc/hdsc/hc32f4xx/Drivers/cmsis/Device/HDSC/hc32f4xx/Include",

    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/osal",

    "//kernel/liteos_m/components/shell/include",
  ]

  ldflags = [
    "-nostartfiles",
    "-Wl,-T" + rebase_path("startup/linker/HC32F4A0xG.ld"),
    "-nostdlib",
    "-Wl,-u_printf_float",
  ]

  libs = [
    "nosys",
  ]

  if (defined(LOSCFG_LIBC_NEWLIB)) {
    ldflags -= [ "-nostdlib" ]
    libs -= [ "nosys" ]
    libs += [
      "c",
      "m",
    ]
  }

  lib_dirs = [ "$root_out_dir/libs" ]
  ldflags += [
    "-Wl,--whole-archive",
    "-lbootstrap",
    "-lbroadcast",
    "-Wl,--no-whole-archive",
  ]

  if (build_xts) {
    ldflags += [
      "-Wl,--whole-archive",
      "-lhctest",
      "-lhal_sysparam",

      "-lmodule_ActsSamgrTest",
      "-lmodule_ActsBootstrapTest",
      "-lmodule_ActsDfxFuncTest",
      "-lmodule_ActsHieventLiteTest",
      "-lmodule_ActsUpdaterFuncTest",
      "-lmodule_ActsHuksHalFunctionTest",
      "-lhuks_test_common",

      "-Wl,--no-whole-archive",
    ]
  }
}
