# Copyright (c) 2022 Hihope Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [ "startup/startup_stm32l496xx.s" ]

  sources += [
    "src/dprintf.c",
    "src/main.c",
    "src/stm32l4xx_hal_msp.c",
    "src/system_stm32l4xx.c",
  ]

  include_dirs = [
    "include",
    "../fs/littlefs/include",
  ]

  include_dirs += [
    "//base/hiviewdfx/hiview_lite",
    "//base/hiviewdfx/hilog_lite/frameworks/mini",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
  ]

  if (build_xts) {
    deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
  }
}

config("public") {
  include_dirs = [
    ".",
    "include",
    "//device/soc/stm/stm32l4xx/sdk/Core/Inc",
    "//device/soc/stm/stm32l4xx/sdk/Drivers/STM32L4xx_HAL_Driver/Inc",
    "//device/soc/stm/stm32l4xx/sdk/Drivers/CMSIS/Device/ST/STM32L4xx/Include",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
    "//drivers/hdf_core/framework/core/common/include/manager",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/interfaces/inner_api/utils",
  ]

lib_dirs = [ "$root_out_dir/libs" ]
  ldflags = [
    "-Wl,-T" + rebase_path("ld/STM32L496VETx_FLASH.ld"),
    "-Wl,-u_printf_float",
    "-Wl,--whole-archive",
    "-lbootstrap",
    "-lbroadcast",
    "-Wl,--no-whole-archive",
  ]

  if (build_xts) {
    
    ldflags += [
      "-Wl,--whole-archive",
      "-lhctest",
      "-lhal_sysparam",
      #因FLASH空间问题，xts分两部分跑，#为注释符
      #part1
      #"-lmodule_ActsSamgrTest",
      #"-lmodule_ActsBootstrapTest",
      #"-lmodule_ActsDfxFuncTest",
      #"-lmodule_ActsHieventLiteTest",
      #"-lmodule_ActsUpdaterFuncTest",
      #part2
      "-lmodule_ActsHuksHalFunctionTest",
      "-lhuks_test_common",
      "-Wl,--no-whole-archive",
    ]
  }

  libs = [
    "c",
    "m",
    "nosys",
  ]
}
