# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ ".",
    "//device/board/goodix/application/ota_demo",
    "//device/board/goodix/application/cloud_collaborate",
    "//vendor/goodix/gr5515_sk_iotlink_test/ble_template/user_app/",
  ]
}

kernel_module("platform_main") {
  sources = [
    "main.c",
    ]
    libs = ["//vendor/ph_libs/csg/libary/cooperation/PHM/libcloud_collaborate.a"]
    libs += ["//vendor/ph_libs/csg/libary/update/PHM/libcloud_ota.a"]
}
